--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "Extension for comby in vscode",
 	"version": "0.0.1",
 	"publisher": "giltho",
+	"license": "MIT",
 	"engines": {
 		"vscode": "^1.40.0"
 	},
@@ -14,10 +15,13 @@
 		"Other"
 	],
 	"repository": {
-		"type" : "git",
-		"url" : "https://github.com/giltho/comby-vscode.git"
+		"type": "git",
+		"url": "https://github.com/giltho/comby-vscode.git"
 	},
-	"keywords": ["comby", "rewrite"],
+	"keywords": [
+		"comby",
+		"rewrite"
+	],
 	"icon": "media/comby.png",
 	"main": "./out/extension.js",
 	"contributes": {
@@ -37,14 +41,13 @@
 	},
 	"devDependencies": {
 		"@types/glob": "^7.1.1",
-		"@types/mocha": "^5.2.7",
 		"@types/node": "^12.11.7",
 		"@types/vscode": "^1.40.0",
 		"glob": "^7.1.5",
-		"mocha": "^6.2.2",
-		"tslint": "^5.20.0",
+		"mocha": "^7.1.0",
 		"typescript": "^3.6.4",
-		"vscode-test": "^1.2.2"
-	},
-	"dependencies": {}
+		"vscode-test": "^1.2.2",
+		"@types/mocha": "^7.0.2",
+		"tslint": "^6.1.0"
+	}
 }
